Final draft for re-submission

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -12,6 +12,8 @@
 % \usepackage[nomarkers,figuresonly]{endfloat}
 \usepackage{multirow}
 \usepackage{tabularx}
+\usepackage{lineno}
+\linenumbers
 
 % Remember to start reftex-mode
 
@@ -42,7 +44,7 @@
 \maketitle
 
 \abstract{Abstract}
-Humans have been shown to adapt their movements when sudden or gradual changes to the dynamics of the environment are introduced, a phenomenon called motor adaptation. If the change is reverted, the adaptation is also quickly reverted. Humans are also able to adapt to multiple changes in dynamics presented separately, and to be able to switch between adapted movements on the fly. Such switching relies on contextual information which is often noisy or misleading, which affects the switch between adaptations. Recently, the COIN computational model for motor adaptation and context inference was introduced, which contains explicit components of context inference and Bayesian motor adaptation. This model was used to show the effects of context inference on learning rates across different experiments. We expanded on that work by using the COIN model to show that the effects of context inference on motor adaptation and control go even further than previously shown. Here, we used the COIN model to simulate classical motor adaptation experiments from previous works and showed that context inference, and how it is affected by the presence and reliability of feedback, effect a host of behavioral phenomena that had so far required multiple hypothesized mechanisms, lacking a unified explanation. Concretely, we show that the reliability of direct contextual information, as well as noisy sensory feedback, typical of many experiments, effect measurable changes in switching-task behavior, as well as in action selection, that stem directly from probabilistic context inference. 
+Humans have been shown to adapt their movements when sudden or gradual changes to the dynamics of the environment are introduced, a phenomenon called motor adaptation. If the change is reverted, the adaptation is also quickly reverted. Humans are also able to adapt to multiple changes in dynamics presented separately, and to be able to switch between adapted movements on the fly. Such switching relies on contextual information which is often noisy or misleading, which affects the switch between adaptations. Recently, the COIN computational model for motor adaptation and context inference was introduced, which contains components for context inference and Bayesian motor adaptation. This model was used to show the effects of context inference on learning rates across different experiments. We expanded on that work by using the COIN model to show that the effects of context inference on motor adaptation and control go even further than previously shown. Here, we used the COIN model to simulate classical motor adaptation experiments from previous works and showed that context inference, and how it is affected by the presence and reliability of feedback, effect a host of behavioral phenomena that had so far required multiple hypothesized mechanisms, lacking a unified explanation. Concretely, we show that the reliability of direct contextual information, as well as noisy sensory feedback, typical of many experiments, effect measurable changes in switching-task behavior, as well as in action selection, that stem directly from probabilistic context inference. 
 
 
 \section{Introduction}
@@ -143,7 +145,7 @@ We simulated data with the model fitting the experimental structure in \cite{Dav
 To confirm our hypothesis, we simulated variants of the experiments in which the COIN model predicts that the difference between groups disappears. First, in \fref{fig:davidson-2004}B, we simulated an experiment in which the contexts have more extreme adaptations, making them more different from baseline than in the \cite{Davidson_Scaling_2004} experiments. To do this, one group adapts in a $O-A-(-2A)$ paradigm, while the other group adapts in a $0-A-4A$ paradigm. As in the original experiment, the second contexts ($-2A$ for one group, $4A$ for the other) are equally spaced from the first context. However, given the larger distance from baseline, the baseline context has a much lower attribution when the switch occurs compared to the original experiment. This change makes both simulated groups infer the correct context almost equally quickly, making the difference between their errors much smaller compared to the original experiment. Furthermore, we simulated an experiment with an identical structure to that of \cite{Davidson_Scaling_2004}, but eliminated the baseline context from the agent. The results can be seen in \fref{fig:davidson-2004}C, where the switches between contexts are made identically by the two groups. We discuss possible implementations of such an experiment in the Discussion section, alongside with other predictions made by the model.
 
 \subsubsection{Action selection in error-clamp blocks}
-During error-clamp blocks at the end of block sequences, participants' behavior can be divided in two phases: (1) Spontaneous recovery, during which participants' behavior is consistent with a previously-encountered context (e.g. in an O-A-E experiment, consistent with A); this phase, when present, is seen during the early trials of the E block. (2) A slow return to baseline, which can last as long as hundreds of trials \citep{Brennan_Decay_2015}. However, the direction of the spontaneous recovery, its duration, the delay before it is observed, the speed of the return to baseline and the final asymptote of the adaptation vary greatly depending on the experiment \citep{Brennan_Decay_2015,Vaswani_Decay_2013,Smith_Interacting_2006,Shmuelof_Overcoming_2012}.
+During error-clamp blocks at the end of block sequences, participants' behavior can be divided in two phases: (1) Participants' behavior is consistent with a previously-encountered context (called spontaneous recover in O-A-B-E experiments, where behavior is consistent with A); this phase, when present, is seen during the early trials of the E block. (2) A slow return to baseline, which can last as long as hundreds of trials \citep{Brennan_Decay_2015}. However, the direction of adaptation during the first phase, its duration, the delay before it is observed, the speed of the return to baseline and the final asymptote of the response vary greatly depending on the experiment \citep{Brennan_Decay_2015,Vaswani_Decay_2013,Smith_Interacting_2006,Shmuelof_Overcoming_2012}.
 
 In this section, we show how context inference can explain these different parameters of behavior by changing the way contextual cues mislead participants' context inference, which in turn influences action selection.
 
@@ -160,7 +162,7 @@ In \fref{fig:vaswani-2013}A, we show data simulated with the COIN model, followi
 
 In \fref{fig:vaswani-2013}C, the inference over context is shown for each group separately. Context inference works reliably until the error-clamp trials start, which do not correspond to any of the known contexts. This causes the agent to infer the combination of some of the known contexts that best fits the observations. Depending on the contexts previously learned by the agent: groups 1.1 and 1.4 display the same behavior, where the previous context (A and -A, respectively) slowly dwindles. These agents will slowly lower the force applied. In contrast, group 1.3 has learned the additional -A/2 context, which has a non-zero posterior probability during E trials, pushing the agent's adaptation force more quickly towards zero. Group 1.2 behaves similarly to 1.1, with the exception that the baseline context, which was recently seen, plays a bigger role during E trials, making the agent reduce its force during E trials slightly more quickly than groups 1.1 and 1.4.
 
-Context inference also explains the variability in the lag before adaptation starts to drop to zero after the E block starts. In the model, this lag is due to a period in which context inference has not ``caught on'' to the change of context; during this period, behavior remains consistent with that of the previously-observed block, as can be seen in the experimental data as well. To show this, we show in \fref{fig:vaswani-2013}D the drop in the inferred probability of the previous context for each simulated run (one line per run, 10 runs per group, all groups). The start and speed of the drop depend on the run (i.e. the participant), reproducing the different lags observed in experimental data.
+Context inference also explains the variability in the lag before adaptation starts to drop to zero after the E block starts. In the model, this lag is due to a period in which context inference has not ``caught on'' to the change of context; during this period, behavior remains consistent with that of the previously-observed block, as can be seen in the experimental data as well. Furthermore, variability in the lag between and within groups is explained by perceptual noise, which directly affects context inference. To show these effects, we show in \fref{fig:vaswani-2013}D the drop in the inferred probability of the previous context for each simulated run (one line per run, 10 runs per group, all groups). The start and speed of the drop depend on the run (i.e. the participant), reproducing the different lags observed in experimental data.
 
 \section{Discussion}
 We showed that context inference as an active, continuous process, can explain many behavioral phenomena observed experimentally. In particular, we showed that the effects of the presence and reliability of contextual cues, as well as observation noise, can cause behavior that can be observed during context switching, as well as during times in which context inference is hindered, as is the case during error-clamp trials in many experiments.
@@ -174,7 +176,7 @@ In many cases, the context is not directly observable and context inference take
 
 The most direct secondary contextual information comes in the form of reward and endpoint feedback. For example, participants may be told whether they obtained the desired reward at the end of a trial and are shown the end point of their movement. When participants observe an unexpectedly large error, they can infer that the inferred context might be incorrect. This is the case of the experiments by \cite{Oh_Minimizing_2019} shown in \fref{fig:oh-2019}B-C: if the adaptation is high, changes in context produce errors much larger than those of motor variability, and a context switch is easily and immediately identified; if adaptation is low, the errors produced by context switching are closer in magnitude to motor variability and evidence accumulation is necessary.
 
-The same rationale explains the results by \cite{Herzfeld_memory_2014}: motor learning, which in the COIN model is modulated by context inference, is minimal for errors close to 2 and -2 (see their figure 2E). This is because an error of 2 or -2 signals that the participant incorrectly identified the context (as adaptation has a magnitude of 1). Additionally, as was shown by \cite{Heald_Contextual_2021}, context inference explains the modulation of learning rate by the volatility of the environment observed by \cite{Herzfeld_memory_2014}.
+The same rationale explains the results by \cite{Herzfeld_memory_2014}, as was shown by \cite{Heald_Contextual_2021}: motor learning, which in the COIN model is modulated by context inference, is minimal for errors close to 2 and -2 (see their figure 2E). This is because an error of 2 or -2 signals that the participant incorrectly identified the context (as adaptation has a magnitude of 1). Additionally, as was shown by \cite{Heald_Contextual_2021}, context inference explains the modulation of learning rate by the volatility of the environment observed by \cite{Herzfeld_memory_2014}.
 
 A subtler source of information can be found in long pauses between blocks of adaptation trials, after which an unprompted partial return to baseline has been observed \cite{Ethier_Spontaneous_2008}. This can be explained by context inference, as a long pause could prompt participants to infer that a switch had occurred, prompting participants to rely on their belief of the underlying probability of observing any of the known contexts, which is dominated by the previously observed context A, but now includes a component of the baseline O, as it is the most common one in everyday life.
 
@@ -184,14 +186,17 @@ In our account, if all information indicating a change in context is removed fro
 
 
 \subsection{Model predictions}
-The basic principle behind the results we presented is that the COIN model describes a process that develops over time and that carries with it uncertainty. This uncertainty affects learning and behavior during motor adaptation, effecting phenomena that are directly observable during behavioral experiments. In the following, we discuss several testable predictions that are direct consequences of the model.  
+The basic principle behind the results we presented is that the COIN model describes a process that develops over time and that carries with it uncertainty. This uncertainty affects learning and behavior during motor adaptation, effecting phenomena that are directly observable during behavioral experiments. In the following, we discuss several testable predictions that are direct consequences of the model.
+
+For the model predictions discussed below, it is important to keep in mind that different contextual cues are not equally effective at separating motor responses during learning and switching \cite{Howard_Gone_2012,Howard_ContextDependent_2010,Imamizu_Explicit_2007}. Because of this, the model predictions hinge on selecting the adequate type of contextual information that maximally helps the participants select the appropriate motor response.
+
 
 \subsubsection{Error-clamp as a known context}
-The inclusion of reliable sensory contextual cues (e.g. lights whose color uniquely identify a context) makes switching immediate, as in the experiments by \cite{Kim_Neural_2015}. We expect that the same effect would be observed in error-clamp trials. If the E block is learned by participants during training, it might still be difficult for them to infer that an E block has started, which would create delays similar to those in \fref{fig:vaswani-2013}. However, the model predicts that if a visual cue is introduced that identifies the E block, participants would immediately switch to their baseline behavior, no longer displaying spontaneous recovery, lag, nor the slow return to baseline. This immediate switch in the presence of contextual cues would persist even if endpoint feedback is manipulated as \cite{Vaswani_Decay_2013} did.
+The inclusion of reliable sensory contextual cues (e.g. lights whose color uniquely identify a context) makes switching immediate, as in the experiments by \cite{Kim_Neural_2015}. We expect that the same effect would be observed in error-clamp trials. If the E block is learned by participants during training, it might still be difficult for them to infer that an E block has started, which would create delays similar to those in \fref{fig:vaswani-2013}. However, the model predicts that if a visual cue is introduced that identifies the E block, participants would immediately switch to their baseline behavior, no longer displaying an adapted response, lag, nor the slow return to baseline. This immediate switch in the presence of contextual cues would persist even if endpoint feedback is manipulated as \cite{Vaswani_Decay_2013} did.
 
-Note that the original COIN specification includes a component to learn new contexts. However, this component works exclusively by creating new contexts in which the forward models take the same form but have different parameter values. It is currently unclear whether the model can be adapted to create contexts in an online fashion that operate in an essentially different manner, as is the case of error-clamp trials, in which participants' responses do not affect the outcome and motor commands are issued based on criteria not directly related to the goal of the task (e.g. energy minimization or comfort maximization).
+Note that the original COIN specification includes a component to learn new contexts. However, this component works exclusively by creating new contexts in which the forward models take the same form but have different parameter values. New mechanisms would be needed to allow the COIN model to create contexts in an online fashion that operate in an essentially different manner, as is the case of error-clamp trials, in which participants' responses do not affect the outcome and motor commands are issued based on criteria not directly related to the goal of the task (e.g. energy minimization or comfort maximization).
 
-\subsubsection{Interference effects}
+\subsubsection{Interference effects during context switching}
 As discussed in the Resuls section, the effect observed by \cite{Davidson_Scaling_2004} is explained by the model as an effect of slow context inference, instead of being a direct interference at the level of learning. As shown in \fref{fig:davidson-2004}B-C, the context inference account predicts that this effect would disappear if all contexts were significantly different from baseline, such that the baseline context never explains the observations. Removing the baseline context from a participant's context inference might be experimentally unfeasible, but other possibilities include making all adaptations bigger (e.g. bigger angles, stronger forces), and including contextual cues that rule out the baseline context. In the opposite direction, the model predicts that if all adaptations are smaller (i.e. closer to baseline), the differences between the two groups would increase.
 
 \subsubsection{Reducing the effect of volatility on learning}
@@ -352,7 +357,7 @@ deviation are stable during the experiment.
 \section{Acknowledgment}
 Funded by the German Research Foundation (DFG, Deutsche Forschungsgemeinschaft) as part of Germany’s Excellence Strategy – EXC 2050/1 – Project ID 390696704 – Cluster of Excellence “Centre for Tactile Internet with Human-in-the-Loop” (CeTI) of Technische Universität Dresden.
 
-\bibliography{MyLibrary}
+\bibliography{../../MyLibrary}
 
 
 
