Plos One submission ready

--- a/adaptation/article/resubmission_letter.org
+++ b/adaptation/article/resubmission_letter.org
@@ -1,7 +1,8 @@
 Dear editor,
 
 we would like to re-submit our manuscript titled "The effects of probabilistic context inference on motor adaptation" for publication as an original research article in the journal PLOS Computational Biology.
-Following recent work that highlight the importance of the process of context inference on motor adaptation, we here aim at showing that even in apparently trivial hand movements measured in classic motor adaptation experiments, there is strong evidence for predictive brain mechanisms based on probabilistic Bayesian inference. On examining the reviewers' comments for our previous submission, we decided to address the reviewers' key concern and shift the focus of the manuscript, going from the introduction of a computational model for contextual motor adaptation, to using the COIN model recently introduced by Heald et al. (2021, Nature). In doing so, the goal of the new manuscript is to expand on the work done by Heald et al. (2021), showing that context inference, as operationalized in the COIN model, explains further experimental findings not considered by Heald et al. (2021), or by Oh and Schweighofer (2019, J. Neurosci.). We have further addressed all comments made by the reviewers regarding other parts of the manuscript.
+
+Following recent works that highlight the importance of the process of context inference on motor adaptation, we here aim at showing that even in apparently trivial hand movements measured in classic motor adaptation experiments, there is strong evidence for predictive brain mechanisms based on probabilistic Bayesian inference. On examining the reviewers' comments for our previous submission, we decided to address the reviewers' key concern and shift the focus of the manuscript, going from the introduction of a computational model for contextual motor adaptation, to using the COIN model recently introduced by Heald et al. (2021, Nature). In doing so, the goal of the new manuscript is to expand on the work done by Heald et al. (2021), showing that context inference, as operationalized in the COIN model, explains further experimental findings not considered by Heald et al. (2021), or by Oh and Schweighofer (2019, J. Neurosci.). We have further addressed all comments made by the reviewers regarding other parts of the manuscript.
 
 In this manuscript, we also discuss key predictions made by the COIN model for how context influences concrete behavior. These can be tested in future experimental studies, with wide-ranging implications
 for our understanding of the way motor control is performed by the brain. Importantly, neither the phenomena discussed in the manuscript nor the predictions made by the model depend on its exact
